removing route, fixing imports and swagger
